--- a/src/pages/puzzle/puzzle.css
+++ b/src/pages/puzzle/puzzle.css
@@ -1,6 +1,6 @@
 .jigsaw-puzzle {
-    width: 60%;
-    height: 60%;
+    width: 1400px;
+    height: 500px;
     border: 2px solid black;
     margin: auto;
     box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.25);
